# Copyright (C) 2005, 2006, 2007 Giuseppe Martino <denever@users.sf.net>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

noinst_HEADERS = autoban.h bookmark.h compatibility.h completion.h feeds.h getln.h globals.h hash.h history.h http.h interface.h md5.h mix.h pipe.h play.h playlist.h radio.h readline.h recommend.h ropen.h sckif.h service.h settings.h split.h strary.h submit.h tag.h util.h xmlrpc.h
